<resources>
    <string name="app_name">CalibrationTool</string>

    <string name="ACTION_STOP_SERVICE">com.arksine.resremote.ACTION_STOP_SERVICE</string>

    <string name="pref_select_device_type">Select Device Type</string>
    <string-array name="pref_select_device_type_entries">
        <item>Bluetooth uInput</item>
        <item>Bluetooth HID</item>
        <item>USB HID</item>
    </string-array>
    <string-array name="pref_select_device_type_values">
        <item>BT_UINPUT</item>
        <item>BT_HID</item>
        <item>USB_HID</item>
    </string-array>
    <string name="pref_select_device_type_default">BT_UINPUT</string>

    <string name="pref_select_device">Select Device</string>
    <string-array name="pref_select_device_entries">
        <item>No Device Selected</item>
    </string-array>
    <string-array name="pref_select_device_values">
        <item>NO_DEVICE</item>
    </string-array>
    <string name="pref_select_device_default">NO_DEVICE</string>

    <string name="pref_start_calibration">Start Calibration</string>

    <string name="pref_orientation_category">Orientation Settings</string>

    <string name="pref_select_orientation">Select Orientation</string>
    <string-array name="pref_select_orientation_entries">
        <item>Current Rotation of Device</item>
        <item>Portrait (Rotation 0)</item>
        <item>Landscape (Rotation 90)</item>
        <item>Reverse Portrait (Rotation 180)</item>
        <item>Reverse Landscape (Rotation 270)</item>
    </string-array>
    <string-array name="pref_select_orientation_values">
        <item>4</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_set_controller_orentation">Set Touch Controller to Selected Orientation</string>
    <string name="title_activity_calibrate_touch">CalibrateTouchActivity</string>

    <string name="orientation_dialog_title">Set Controller Orientation</string>
    <string name="orientation_dialog_message">Connecting, make sure the device is in serial mode</string>
    <string name="orientation_dialog_failed">Failed to connect!</string>
    <string name="orientation_dialog_finished">Orientation set!</string>

    <!-- Showcaseview strings-->
    <string name="cal_title">Touch Screen Calibration</string>
    <string name="cal_connect">Connecting, make sure the device is in serial mode</string>
    <string name="cal_point_text">Please touch the indicated point</string>
    <string name="cal_pressure_title">Pressure Calibration</string>
    <string name="cal_pressure_text">Touch the screen, slowly increasing pressure</string>
    <string name="cal_finshed_title">Calibration Complete!</string>
    <string name="cal_finished_text">Window will automatically close momentarily</string>
    <string name="cal_button_text">Exit</string>
</resources>
